--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,12 @@
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
+            <a class="extra" href="/">
+              Home
+            </a>
+            <a class="extra" href="/2013/11/15/code-of-conduct.html">
+              Code of Conduct
+            </a>
           </div>
 
           {{ content }}
