--- a/css/main.css
+++ b/css/main.css
@@ -4,25 +4,31 @@
 /*
 /*****************************************************************************/
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
 /* Global Reset */
 * {
   margin: 0;
   padding: 0;
 }
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+}
 
 body {
   background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
+  font: 13.34px "Open Sans", Arial, sans-serif;
   font-size: small;
   text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
+  font-size: 100%;
+}
 
 h1 { margin-bottom: 1em; }
+h2 { text-align: center; }
 p { margin: 1em 0; }
 
 a         { color: #00a; }
@@ -47,6 +53,10 @@ ul.posts span {
   color: #aaa;
   font-family: Monaco, "Courier New", monospace;
   font-size: 80%;
+}
+
+ul.posts .excerpt {
+  margin-left: 30px;
 }
 
 /*****************************************************************************/
@@ -74,7 +84,8 @@ ul.posts span {
 }
 
 .site .header h1.title a {
-  color: #a00;
+  color: #000;
+  font-size: 24px;
 }
 
 .site .header h1.title a:hover {
