Style the footer better

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,24 +29,26 @@
           {{ content }}
 
           <div class="footer">
-            <div class="contact">
-              <p>
-                MadPUG<br />
-                Madison (WI) Python Users' Group<br />
-                <a href="http://www.meetup.com/MadPUG/">
-                  http://www.meetup.com/MadPUG/
-                </a>
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/MadPUG">
-                  github.com/MadPUG
-                </a><br />
-                <a href="https://twitter.com/MadisonPUG">
-                  twitter.com/MadisonPUG
-                </a><br />
-              </p>
+            <div class="body">
+              <div class="contact contact-left">
+                <p>
+                  MadPUG<br />
+                  Madison (WI) Python Users' Group<br />
+                  <a href="http://www.meetup.com/MadPUG/">
+                    http://www.meetup.com/MadPUG/
+                  </a>
+                </p>
+              </div>
+              <div class="contact contact-right">
+                <p>
+                  <a href="https://github.com/MadPUG">
+                    github.com/MadPUG
+                  </a><br />
+                  <a href="https://twitter.com/MadisonPUG">
+                    twitter.com/MadisonPUG
+                  </a><br />
+                </p>
+              </div>
             </div>
           </div>
         </div>
