Style menu a bit better

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,18 @@
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+          </div>
+          <div class="sub-header">
             <a class="extra" href="/">
               Home
             </a>
+            /
             <a class="extra" href="/2013/11/15/code-of-conduct.html">
               Code of Conduct
+            </a>
+            /
+            <a class="extra" href="/all.html">
+              All Posts
             </a>
           </div>
 
