--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 { margin-bottom: 1em; }
 h2 { text-align: center; }
+h3 {
+  font-size: 18px;
+  margin-bottom: 1em;
+}
 p { margin: 1em 0; }
 
 a         { color: #00a; }
@@ -116,6 +120,7 @@ a {
 
 .site .meta {
   color: #aaa;
+  font-size: 80%;
 }
 
 .site .footer {
